[package]
name = "tai-stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
time = { version = "0.3.17", features = ["macros"] }

[target.'cfg(any(windows, unix))'.dependencies]
once_cell = "1.16.0"

[target.'cfg(any(target_os = "android", target_os = "emscripten", target_os = "fuchsia", target_os = "linux"))'.dependencies]
nix = { version = "0.25.0", features = ["time"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winerror", "winreg"] }
