[package]
name = "tai-stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
time = { version = "0.3.17", default-features = false, features = ["macros"] }

[target.'cfg(any(windows, unix))'.dependencies]
once_cell = { version = "1.16.0", optional = true }

[target.'cfg(any(target_os = "android", target_os = "emscripten", target_os = "fuchsia", target_os = "linux"))'.dependencies]
nix = { version = "0.25.0", features = ["time"], optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winerror", "winreg"], optional = true }

[features]
default = ["std"]
std = ["time/std", "once_cell", "nix", "winapi"]
